--- a/Battleship with Java/Create the field/task-info.yaml
+++ b/Battleship with Java/Create the field/task-info.yaml
@@ -156,7 +156,7 @@ files:
           }
       }
     learner_created: false
-feedback_link: https://hyperskill.org/projects/383/stages/2281/implement#comment
+feedback_link: https://hyperskill.org/learn/step/35304#comment
 status: Solved
 feedback:
   message: Congratulations!
