--- a/Battleship with Java/Add multiplayer option/task-info.yaml
+++ b/Battleship with Java/Add multiplayer option/task-info.yaml
@@ -391,7 +391,7 @@ files:
   - name: src/battleship/Player.java
     visible: true
     learner_created: true
-feedback_link: https://hyperskill.org/projects/383/stages/2286/implement#comment
+feedback_link: https://hyperskill.org/learn/step/35309#comment
 status: Solved
 feedback:
   message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
