--- a/Battleship with Java/Add shooting functionality/task-info.yaml
+++ b/Battleship with Java/Add shooting functionality/task-info.yaml
@@ -450,7 +450,7 @@ files:
         }
       }
     learner_created: false
-feedback_link: https://hyperskill.org/projects/383/stages/2283/implement#comment
+feedback_link: https://hyperskill.org/learn/step/35306#comment
 status: Solved
 feedback:
   message: Congratulations!
