--- a/Battleship with Java/Implement the  fog of war  feature/task-info.yaml
+++ b/Battleship with Java/Implement the  fog of war  feature/task-info.yaml
@@ -498,7 +498,7 @@ files:
         }
       }
     learner_created: false
-feedback_link: https://hyperskill.org/projects/383/stages/2284/implement#comment
+feedback_link: https://hyperskill.org/learn/step/35307#comment
 status: Solved
 feedback:
   message: Congratulations!
